# Fashion-Forward-Hub

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: auth.py  chatbot.py  config.py  database.py  llm.py  metadata_filter.py  models.py  query_router.py  rag_pipeline.py  reranker.py  schemas.py  tracer.py
src/interface/: web_app.py
static/css/: auth.css  style.css
static/js/: auth.js  chat.js
templates/: chat.html  index.html
tests/: README_TESTING.md  conftest.py  run_tests.py
tests/evaluation/: test_performance.py  test_rag_quality.py
tests/integration/: test_rag_pipeline.py
tests/unit/: test_retrieval.py
